<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/tvCreateGroupTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg"
                android:textColor="@android:color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regtext"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="48dp"/>

            <TextView
                android:id="@+id/enter_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:autofillHints="name"
                android:background="@drawable/edit_text_border"
                android:paddingHorizontal="12dp"
                android:inputType="text"
                android:layout_marginBottom="24dp" />

            <TextView
                android:id="@+id/enter_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/enter_user"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/Username"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:autofillHints="username"
                android:background="@drawable/edit_text_border"
                android:paddingHorizontal="12dp"
                android:inputType="text"
                android:layout_marginBottom="32dp" />

            <TextView
                android:id="@+id/make_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/make_pass"
                app:endIconMode="password_toggle"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:autofillHints="password"
                android:background="@drawable/edit_text_border"
                android:paddingHorizontal="12dp"
                android:inputType="textPassword"
                android:layout_marginBottom="32dp" />

            <Button
                android:id="@+id/btnCreateGroup"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/next"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:backgroundTint="#4facfe" app:cornerRadius="8dp"
                android:stateListAnimator="@null"
                android:elevation="4dp"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/btnContinueWithoutGroup"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_acc"
                android:textColor="#4facfe" android:textSize="14sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="8dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>